--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Mujhe anday wala burger</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
